--- a/courses/biology.html
+++ b/courses/biology.html
@@ -9,11 +9,9 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Caleb Paslay" />
 
-<meta name="date" content="2022-11-30" />
 
-<title>Courses Home Page</title>
+<title>biology.knit</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -363,24 +361,113 @@ pre code {
 
 
 
-<h1 class="title toc-ignore">Courses Home Page</h1>
-<h4 class="author">Caleb Paslay</h4>
-<h4 class="date">2022-11-30</h4>
 
 </div>
 
 
-<div id="biology" class="section level1">
-<h1><a href="courses/biology/biology.html">Biology</a></h1>
+<div id="semester-outline" class="section level5">
+<h5><strong>Semester outline</strong></h5>
+<!---Based on 2022 calendar year--->
+<table>
+<thead>
+<tr class="header">
+<th align="center">Week</th>
+<th align="center">Description</th>
+<th align="center">Assignment</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="center">1</td>
+<td align="center">Introduction to Biology</td>
+<td align="center"><a href>What is Biology?</a></td>
+</tr>
+<tr class="even">
+<td align="center">2</td>
+<td align="center"></td>
+<td align="center"></td>
+</tr>
+<tr class="odd">
+<td align="center">3</td>
+<td align="center"></td>
+<td align="center"></td>
+</tr>
+<tr class="even">
+<td align="center">4</td>
+<td align="center"></td>
+<td align="center"></td>
+</tr>
+<tr class="odd">
+<td align="center">5</td>
+<td align="center"></td>
+<td align="center"></td>
+</tr>
+<tr class="even">
+<td align="center">6</td>
+<td align="center"></td>
+<td align="center"></td>
+</tr>
+<tr class="odd">
+<td align="center">7</td>
+<td align="center"></td>
+<td align="center"></td>
+</tr>
+<tr class="even">
+<td align="center">8</td>
+<td align="center"></td>
+<td align="center"></td>
+</tr>
+<tr class="odd">
+<td align="center">9</td>
+<td align="center"></td>
+<td align="center"></td>
+</tr>
+<tr class="even">
+<td align="center">10</td>
+<td align="center"></td>
+<td align="center"></td>
+</tr>
+<tr class="odd">
+<td align="center">11</td>
+<td align="center"></td>
+<td align="center"></td>
+</tr>
+<tr class="even">
+<td align="center">12</td>
+<td align="center"></td>
+<td align="center"></td>
+</tr>
+<tr class="odd">
+<td align="center">13</td>
+<td align="center"></td>
+<td align="center"></td>
+</tr>
+<tr class="even">
+<td align="center">14</td>
+<td align="center"></td>
+<td align="center"></td>
+</tr>
+<tr class="odd">
+<td align="center">15</td>
+<td align="center"></td>
+<td align="center"></td>
+</tr>
+<tr class="even">
+<td align="center">16</td>
+<td align="center"></td>
+<td align="center"></td>
+</tr>
+</tbody>
+</table>
 </div>
-<div id="chemistry" class="section level1">
-<h1><a href="courses/chemistry.html">Chemistry</a></h1>
-</div>
-<div id="earth-science" class="section level1">
-<h1><a href="courses/chemistry.html">Earth Science</a></h1>
-</div>
-<div id="botany" class="section level1">
-<h1><a href="courses/chemistry.html">Botany</a></h1>
+<div id="youtube-resources" class="section level2">
+<h2>Youtube Resources</h2>
+<p><a href="https://thecrashcourse.com/topic/biology/">Crash Course
+Biology</a></p>
+<p><a href="https://www.youtube.com/playlist?list=PL7A9646BC5110CF64">Khan
+Academy Biology</a></p>
+<p><a href="https://www.youtube.com/watch?v=DHAK-Idi_OY">Amoeba Sisters
+Biology</a></p>
 </div>
 
 
