--- a/courses/biology/biology.html
+++ b/courses/biology/biology.html
@@ -367,7 +367,7 @@ pre code {
 
 <div id="semester-outline" class="section level5">
 <h5><strong>Semester outline</strong></h5>
-<!---Based on 2022 calendar year--->
+<!---Based on 2022 calendar year and geared toward college schedule--->
 <table>
 <thead>
 <tr class="header">
@@ -379,8 +379,9 @@ pre code {
 <tbody>
 <tr class="odd">
 <td align="center">1</td>
-<td align="center">Introduction to Biology</td>
-<td align="center">What is Biology?</td>
+<td align="center">Science of Life</td>
+<td align="center"><a href="week_1/bio_class_trial.docx">What is
+Biology?</a></td>
 </tr>
 <tr class="even">
 <td align="center">2</td>
